--- a/ProgramManager/View/CreatePackageWindow.xaml
+++ b/ProgramManager/View/CreatePackageWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ProgramManager.CreatePackWindow"
+﻿<Window x:Class="ProgramManager.View.CreatePackageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProgramManager"
+        xmlns:local="clr-namespace:ProgramManager.View"
         mc:Ignorable="d"
         Title="Создать пакет" 
         Height="550" Width="417" 
@@ -39,7 +39,7 @@
                             <Button Grid.Column="1" Grid.Row="1" Style="{StaticResource btIcon}" Height="29" Margin="0,31,5,12.218">
                                 <Button.Content>
                                     <ContentControl>
-                                        <Image Height="24" Source="Resources/Icons/Add_Folder_48px.png"></Image>
+                                        <Image Height="24" Source="../Resources/Icons//Add_Folder_48px.png"></Image>
                                     </ContentControl>
                                 </Button.Content>
                             </Button>
@@ -61,28 +61,28 @@
                                 <Button Grid.Column="2" Style="{StaticResource btIcon}" Margin="0,20,5,5">
                                     <Button.Content>
                                         <ContentControl>
-                                            <Image Height="24" Source="Resources/Icons/Plus_Math_48px.png"></Image>
+                                            <Image Height="24" Source="../Resources/Icons//Plus_Math_48px.png"></Image>
                                         </ContentControl>
                                     </Button.Content>
                                 </Button>
                                 <Button Style="{StaticResource btIcon}" Margin="0,20,5,5">
                                     <Button.Content>
                                         <ContentControl>
-                                            <Image Height="24" Source="Resources/Icons/Edit_48px.png"></Image>
+                                            <Image Height="24" Source="../Resources/Icons///Edit_48px.png"></Image>
                                         </ContentControl>
                                     </Button.Content>
                                 </Button>
                                 <Button Grid.Column="2" Style="{StaticResource btIcon}" Margin="0,20,5,5">
                                     <Button.Content>
                                         <ContentControl>
-                                            <Image Height="24" Source="Resources/Icons/Delete_48px.png"></Image>
+                                            <Image Height="24" Source="../Resources/Icons//Delete_48px.png"></Image>
                                         </ContentControl>
                                     </Button.Content>
                                 </Button>
                                 <Button Grid.Column="2" Style="{StaticResource btIcon}" Margin="0,105,5,5">
                                     <Button.Content>
                                         <ContentControl>
-                                            <Image Height="24" Source="Resources/Icons/Optional_48px.png"></Image>
+                                            <Image Height="24" Source="../Resources/Icons//Optional_48px.png"></Image>
                                         </ContentControl>
                                     </Button.Content>
                                 </Button>
