--- a/ProgramManager/App.xaml
+++ b/ProgramManager/App.xaml
@@ -2,9 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProgramManager"
-             xmlns:Views="clr-namespace:ProgramManager.Views"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
+             xmlns:Views="clr-namespace:ProgramManager.Views">
+<Application.Resources>
         <Style x:Key="btIcon">
             <Setter Property="Control.Background" Value="{x:Null}"></Setter>
             <Setter Property="Control.BorderBrush" Value="{x:Null}"></Setter>
