--- a/ProgramManager/Views/DialogPackages.xaml
+++ b/ProgramManager/Views/DialogPackages.xaml
@@ -1,10 +1,10 @@
-﻿<Window
+﻿<Window x:Class="ProgramManager.Views.DialogPackages"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProgramManager.Views"
-        xmlns:vm="clr-namespace:ProgramManager.ViewModels" x:Class="ProgramManager.Views.CreatePackageWindow"
+ 
         mc:Ignorable="d"
         Title="Создать пакет" 
         Height="550" Width="417" 
@@ -14,10 +14,8 @@
         MinHeight="600" MinWidth="500"
         MaxHeight="600" MaxWidth="500" Background="#FFE6E6E6"
         >
+
     <Grid>
-        <Grid.DataContext>
-            <vm:CreatePackageViewModel/>
-        </Grid.DataContext>
         <Grid.RowDefinitions>
             <RowDefinition Height="25*"/>
             <RowDefinition Height="100*"/>
