--- a/ProgramManager/Views/MainView.xaml
+++ b/ProgramManager/Views/MainView.xaml
@@ -1,9 +1,12 @@
-﻿<Window x:Class="ProgramManager.MainWindow"
+﻿<Window x:Class="ProgramManager.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProgramManager"
+        xmlns:markupExtensions="clr-namespace:ProgramManager.MarkupExtensions"
+        xmlns:enums="clr-namespace:ProgramManager.Enums"
+        xmlns:converters="clr-namespace:ProgramManager.Converters"
         xmlns:vm="clr-namespace:ProgramManager.ViewModels"
         mc:Ignorable="d"
         Title="Pragram Manager" Height="606" Width="900" MinHeight="584" MinWidth="870" MaxHeight="700" MaxWidth="870" WindowStartupLocation="CenterScreen">
@@ -91,7 +94,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Open_48px.png" ></Image>
+                            <Image Width="18" Source="../Resources/Icons/Open_48px.png" ></Image>
                             <Label Content="Открыть" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -101,7 +104,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Add_Folder_48px.png"></Image>
+                            <Image Width="18" Source="../Resources/Icons/Add_Folder_48px.png"></Image>
                             <Label Content="Создать" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -111,7 +114,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Edit_48px.png"></Image>
+                            <Image Width="18" Source="../Resources/Icons/Edit_48px.png"></Image>
                             <Label Content="Редактировать" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -121,7 +124,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Rename_48px.png"></Image>
+                            <Image Width="18" Source="../Resources/Icons/Rename_48px.png"></Image>
                             <Label Content="Переименовать" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -132,7 +135,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Add_to_Favorites_48px.png"></Image>
+                            <Image Width="18" Source="../Resources/Icons/Add_to_Favorites_48px.png"></Image>
                             <Label Content="Добавить в избранное" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -142,7 +145,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Categorize_48px.png"></Image>
+                            <Image Width="18" Source="../Resources/Icons/Categorize_48px.png"></Image>
                             <Label Content="Добавить в категории" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -152,7 +155,7 @@
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="Resources/Icons/Add_Tag_48px.png"></Image>
+                            <Image Width="18" Source="../Resources/Icons/Add_Tag_48px.png"></Image>
                             <Label Content="Добавить тег" BorderBrush="{x:Null}" Height="24"></Label>
                         </WrapPanel>
                     </ContentControl>
@@ -174,7 +177,7 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <ListBox Grid.Row="4" Grid.RowSpan="4" Margin="5,0" 
+        <ListBox Grid.Row="4" Grid.RowSpan="4" Margin="5,0" ItemStringFormat=""
                  ItemsSource="{Binding Subcategory, Mode=TwoWay}"
                  SelectedItem="{Binding CurrentSubcategory, Mode=TwoWay}"
                  IsSynchronizedWithCurrentItem="True">
@@ -201,12 +204,12 @@
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition Width="32"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Image Height="16" Source="Resources/Icons/Search_48px.png"></Image>
+                <Image Height="16" Source="../Resources/Icons/Search_48px.png"></Image>
                 <TextBox Grid.Column="1" Text="{Binding FilterPackages, UpdateSourceTrigger=PropertyChanged}" Tag="Искать..."/>
                 <Button Grid.Column="2" Style="{StaticResource btIcon}" Margin="4">
                     <Button.Content>
                         <ContentControl>
-                            <Image Grid.Column="2" Height="16" Source="Resources/Icons/Delete_48px.png"></Image>
+                            <Image Grid.Column="2" Height="16" Source="../Resources/Icons/Delete_48px.png"></Image>
                         </ContentControl>
                     </Button.Content>
                 </Button>
@@ -233,7 +236,7 @@
             </Grid.RowDefinitions>
         </Grid>
         <Image Grid.Column="2" Grid.Row="3" Grid.RowSpan="2" 
-               Source="Resources/19572.jpg" Width="250" 
+               Source="../Resources/19572.jpg" Width="250" 
                Height="320" HorizontalAlignment="Right" 
                Margin="10" OpacityMask="Black" 
                RenderTransformOrigin="0.5,0.5"/>
@@ -241,7 +244,7 @@
             <Rectangle Fill="#CDCDCD" Height="1" Width="240"></Rectangle>
             <WrapPanel>
                 <Label Content="Имя:" FontWeight="Bold"></Label>
-                <Label Name="Name" Content="{Binding CurrentPackage.Name, Mode=TwoWay}"></Label>
+                <Label Name="PackageName" Content="{Binding CurrentPackage.Name, Mode=TwoWay}"></Label>
             </WrapPanel>
             <WrapPanel>
                 <Label Content="Автор:" FontWeight="Bold"></Label>
