--- a/ProgramManager/App.xaml
+++ b/ProgramManager/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProgramManager"
-             xmlns:Views="clr-namespace:ProgramManager.Views">
+             xmlns:views="clr-namespace:ProgramManager.Views">
 <Application.Resources>
         <Style x:Key="btIcon">
             <Setter Property="Control.Background" Value="{x:Null}"></Setter>
