--- a/ProgramManager/Views/DialogPackages.xaml
+++ b/ProgramManager/Views/DialogPackages.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProgramManager.Views"
- 
+        xmlns:dpack="clr-namespace:ProgramManager.Views.DialogPacks"
         mc:Ignorable="d"
         Title="Создать пакет" 
         Height="550" Width="417" 
@@ -91,91 +91,9 @@
         <Grid Grid.Row="1">
             <TabControl Grid.Row="1">
                 <TabItem Header="Поля">
-                    <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
-                        <Grid Name="TabTextfield">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="80"/>
-                                <RowDefinition Height="80"/>
-                                <RowDefinition Height="80"/>
-                                <RowDefinition Height="80"/>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Row="0">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="354*"/>
-                                        <ColumnDefinition Width="60*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <StackPanel Grid.RowSpan="2" Grid.Column="0" Width="406">
-                                        <TextBlock Margin="10,5,15,0" Height="20" Text="Автор:"/>
-                                        <TextBox Margin="10,5,10,5" Height="35" Tag="Имя..."/>
-                                    </StackPanel>
-                                    <WrapPanel Grid.Column="1" Grid.Row="1">
-                                        <Button Grid.Column="2" Margin="0,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                            <ContentControl>
-                                                <Image Height="24" Source="../Resources/Icons/User_48px.png"/>
-                                            </ContentControl>
-                                        </Button>
-                                    </WrapPanel>
-                                </Grid>
-                            </Label>
-                            <Label Grid.Row="1">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="354*"/>
-                                        <ColumnDefinition Width="60*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <StackPanel Grid.RowSpan="2" Grid.Column="0" Width="406">
-                                        <TextBlock Margin="10,5,15,0" Height="20" Text="Версия:"/>
-                                        <TextBox Margin="10,5,10,5" Height="35" Tag="Версия..."/>
-                                    </StackPanel>
-                                    <WrapPanel Grid.Column="1" Grid.Row="1">
-                                        <Button Grid.Column="2" Margin="0,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                            <ContentControl>
-                                                <Image Height="24" Source="../Resources/Icons/Expand_Arrow_48px.png"/>
-                                            </ContentControl>
-                                        </Button>
-                                    </WrapPanel>
-                                </Grid>
-                            </Label>
-                            <Label Grid.Row="2">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="354*"/>
-                                        <ColumnDefinition Width="60*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <StackPanel Grid.RowSpan="2" Grid.Column="0" Width="406">
-                                        <TextBlock Margin="10,5,15,0" Height="20" Text="Лицензия:"/>
-                                        <TextBox Margin="10,5,10,5" Height="35" Tag="Бесплатная..."/>
-                                    </StackPanel>
-                                    <WrapPanel Grid.Column="1" Grid.Row="1">
-                                        <Button Grid.Column="2" Margin="0,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                            <ContentControl>
-                                                <Image Height="24" Source="../Resources/Icons/Expand_Arrow_48px.png"/>
-                                            </ContentControl>
-                                        </Button>
-                                        <Button Grid.Column="2" Margin="5,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                            <ContentControl>
-                                                <Image Height="24" Source="../Resources/Icons/Delete_48px.png"/>
-                                            </ContentControl>
-                                        </Button>
-                                    </WrapPanel>
-                                </Grid>
-                            </Label>
-                            <Button Grid.Row="4" Content="Добавить поле" Height="30" Width="125"/>
-                        </Grid>
-                    </ScrollViewer>
+                    <ItemsControl>
+                        <dpack:TabFields/>
+                    </ItemsControl>
                 </TabItem>
                 <TabItem Header="Описание">
                     <Grid>
@@ -185,72 +103,9 @@
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="TabAddPath" Header="Файлы*">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="80"/>
-                            <RowDefinition Height="80"/>
-                        </Grid.RowDefinitions>
-                        <Label Margin="0,0,58,0">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="35*"/>
-                                    <RowDefinition Height="34*"/>
-                                </Grid.RowDefinitions>
-                                <StackPanel Grid.RowSpan="2" HorizontalAlignment="Left" Width="306">
-                                    <TextBlock Margin="5,5,15,0" Height="20" Text="Имя пакета:"/>
-                                    <TextBox Margin="5,5,10,5" Height="35" Tag="Имя..."/>
-                                </StackPanel>
-                            </Grid>
-                        </Label>
-                        <StackPanel Grid.Row="1" Height="336" VerticalAlignment="Top" Margin="0,0,0,-255">
-                            <Grid Height="335">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="75*"/>
-                                    <RowDefinition Height="100*"/>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="385*"/>
-                                    <ColumnDefinition Width="51*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <ListView Grid.RowSpan="2" x:Name="listView" Margin="10,11,0,0"
-                                      BorderBrush="LightGray"                                     
-                                      VerticalAlignment="Top" Height="314">
-                                    <ListView.View>
-                                        <GridView>
-                                            <GridViewColumn Width="50" Header="Номер"/>
-                                            <GridViewColumn Width="50" Header="Имя"/>
-                                            <GridViewColumn Width="100" Header="Путь"/>
-                                            <GridViewColumn Width="100" Header="Скрипт"/>
-                                        </GridView>
-                                    </ListView.View>
-                                </ListView>
-
-                                <StackPanel Grid.RowSpan="3" Height="184" VerticalAlignment="Top" Margin="0,11,0,0" Grid.Column="1">
-                                    <Button Grid.Column="2" Style="{StaticResource btIcon}" Margin="10,20,10,5" Height="28">
-                                        <ContentControl>
-                                            <Image Height="24" Source="../Resources/Icons/Plus_Math_48px.png"/>
-                                        </ContentControl>
-                                    </Button>
-                                    <Button Style="{StaticResource btIcon}" Margin="10,20,10,5" Height="28">
-                                        <ContentControl>
-                                            <Image Height="24" Source="../Resources/Icons/Edit_48px.png"/>
-                                        </ContentControl>
-                                    </Button>
-                                    <Button Grid.Column="2" Style="{StaticResource btIcon}" Margin="10,20,10,5" Height="28">
-                                        <ContentControl>
-                                            <Image Height="24" Source="../Resources/Icons/Delete_48px.png"/>
-                                        </ContentControl>
-                                    </Button>
-                                    <Button Style="{StaticResource btIcon}" Margin="10,50,10,5" Height="35">
-                                        <ContentControl>
-                                            <Image Height="24" Source="../Resources/Icons/Optional_48px.png"/>
-                                        </ContentControl>
-                                    </Button>
-                                </StackPanel>
-                            </Grid>
-                        </StackPanel>
-                    </Grid>
+                    <ItemsControl>
+                        <dpack:TabFiles/>
+                    </ItemsControl>
                 </TabItem>
             </TabControl>
         </Grid>
