--- a/ProgramManager/Views/DialogPacks/TabFields.xaml
+++ b/ProgramManager/Views/DialogPacks/TabFields.xaml
@@ -4,93 +4,74 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProgramManager.Views.DialogPacks"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <Grid Name="TabTextfield">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition Height="80"/>
-                </Grid.RowDefinitions>
+             xmlns:vm="clr-namespace:ProgramManager.ViewModels"
+             xmlns:models="clr-namespace:ProgramManager.Models"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance vm:TextFieldViewModel}"
+             d:DesignHeight="300" d:DesignWidth="500">
+    <UserControl.Resources>
+        <!--Элементы из данного шаблона будет созданы для каждого элемента списка-->
+        <DataTemplate DataType="{x:Type models:TextFieldModel}">
+            <StackPanel>
                 <Label Grid.Row="0">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="354*"/>
-                            <ColumnDefinition Width="60*"/>
+                            <ColumnDefinition Width="300*"/>
+                            <ColumnDefinition Width="80*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <StackPanel Grid.RowSpan="2" Grid.Column="0" Width="406">
-                            <TextBlock Margin="10,5,15,0" Height="20" Text="Автор:"/>
-                            <TextBox Margin="10,5,10,5" Height="35" Tag="Имя..."/>
+                        <StackPanel Grid.Column="0" Grid.RowSpan="2" Width="380">
+                            <TextBlock Margin="10,5,168,0" Height="20" Text="{Binding Path=LabelField}"/>
+                            <TextBox Margin="10,5,30,5" Height="35" Tag="{Binding Path=HintField}"/>
                         </StackPanel>
-                        <WrapPanel Grid.Column="1" Grid.Row="1">
-                            <Button Grid.Column="2" Margin="0,-1,0,0" Style="{StaticResource btIcon}" Height="28">
+                        <WrapPanel Grid.Column="1" Grid.Row="1" Margin="0,22,0,0" Width="80">
+                            <Button Grid.Column="1" Height="28">
                                 <ContentControl>
-                                    <Image Height="24" Source="../../Resources/Icons/User_48px.png"/>
+                                    <Image Height="24" Source="{Binding Path=AutoCompleteIcon}"/>
+                                </ContentControl>
+                            </Button>
+                            <Button Margin="5,0,0,0" Height="28" 
+                                    Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl},
+                                    Path=DataContext.RemoveTextField}"
+                                    CommandParameter="{Binding}">
+                                <ContentControl>
+                                    <Image Height="24" Source="{Binding Path=DeleteTextFieldIcon}"/>
                                 </ContentControl>
                             </Button>
                         </WrapPanel>
                     </Grid>
                 </Label>
-                <Label Grid.Row="1">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="354*"/>
-                            <ColumnDefinition Width="60*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <StackPanel Grid.RowSpan="2" Grid.Column="0" Width="406">
-                            <TextBlock Margin="10,5,15,0" Height="20" Text="Версия:"/>
-                            <TextBox Margin="10,5,10,5" Height="35" Tag="Версия..."/>
-                        </StackPanel>
-                        <WrapPanel Grid.Column="1" Grid.Row="1">
-                            <Button Grid.Column="2" Margin="0,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                <ContentControl>
-                                    <Image Height="24" Source="../../Resources/Icons/Expand_Arrow_48px.png"/>
-                                </ContentControl>
-                            </Button>
-                        </WrapPanel>
-                    </Grid>
-                </Label>
-                <Label Grid.Row="2">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="354*"/>
-                            <ColumnDefinition Width="60*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <StackPanel Grid.RowSpan="2" Grid.Column="0" Width="406">
-                            <TextBlock Margin="10,5,15,0" Height="20" Text="Лицензия:"/>
-                            <TextBox Margin="10,5,10,5" Height="35" Tag="Бесплатная..."/>
-                        </StackPanel>
-                        <WrapPanel Grid.Column="1" Grid.Row="1">
-                            <Button Grid.Column="2" Margin="0,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                <ContentControl>
-                                    <Image Height="24" Source="../../Resources/Icons/Expand_Arrow_48px.png"/>
-                                </ContentControl>
-                            </Button>
-                            <Button Grid.Column="2" Margin="5,-1,0,0" Style="{StaticResource btIcon}" Height="28">
-                                <ContentControl>
-                                    <Image Height="24" Source="../../Resources/Icons/Delete_48px.png"/>
-                                </ContentControl>
-                            </Button>
-                        </WrapPanel>
-                    </Grid>
-                </Label>
-                <Button Grid.Row="4" Content="Добавить поле" Height="30" Width="125"/>
-            </Grid>
-        </ScrollViewer>
-    </Grid>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
+    <!--Привязка модели к представлению-->
+    <DockPanel LastChildFill="True">
+        <StackPanel Name="StackPanel" DockPanel.Dock="Top">
+            <ItemsControl x:Name="ItemsControl" ItemsSource="{Binding TextField}" HorizontalContentAlignment="Stretch"/>
+            <StackPanel Orientation="Vertical">
+
+                <Button x:Name="AddField"
+                                Margin="0,10,34,10"
+                                Content="Добавить поле"
+                                Command="{Binding AddTextField}"
+                                HorizontalAlignment="Right" Width="103" Height="25">
+                    <Button.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Автор"></MenuItem>
+                            <MenuItem Header="Версия"></MenuItem>
+                            <MenuItem Header="Лицензия"></MenuItem>
+                            <MenuItem Header="Авторские прова"></MenuItem>
+                            <MenuItem Header="Официальный сайт"></MenuItem>
+                            <MenuItem Header="Лицензионный ключ"></MenuItem>
+                            <MenuItem Header="Источник"></MenuItem>
+                            <MenuItem Header="Хеш-суммы"></MenuItem>
+                        </ContextMenu>
+                    </Button.ContextMenu>
+                </Button>
+            </StackPanel>
+        </StackPanel>
+    </DockPanel>
 </UserControl>
