--- a/ProgramManager/Views/MainView.xaml
+++ b/ProgramManager/Views/MainView.xaml
@@ -179,13 +179,13 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
         <ListBox Grid.Row="4" Grid.RowSpan="4" Margin="5,0" ItemStringFormat=""
-                 ItemsSource="{Binding Subcategory, Mode=TwoWay}"
-                 SelectedItem="{Binding CurrentSubcategory, Mode=TwoWay}"
+                 ItemsSource="{Binding Tags, Mode=TwoWay}"
+                 SelectedItem="{Binding CurrentTag, Mode=TwoWay}"
                  IsSynchronizedWithCurrentItem="True">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Height="30" Width="auto" Padding="5,8" Text="{Binding SubcategoryName}">
+                    <WrapPanel>
+                        <TextBlock Height="30" Width="190" Padding="5,8" Text="{Binding TagName}">
                             <!--<TextBlock.InputBindings>
                                 <MouseBinding
                                     Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=DataContext.InsertCommand}"
@@ -193,7 +193,8 @@
                                     Gesture="LeftClick"/>
                             </TextBlock.InputBindings>-->
                         </TextBlock>
-                    </StackPanel>
+                        <Label Content="{Binding Count}"></Label>
+                    </WrapPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
