--- a/ProgramManager/Views/DialogPacks/TabFields.xaml
+++ b/ProgramManager/Views/DialogPacks/TabFields.xaml
@@ -3,11 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ProgramManager.Views.DialogPacks"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:ProgramManager.Models"
     xmlns:vm="clr-namespace:ProgramManager.ViewModels"
-    d:DataContext="{d:DesignInstance vm:DialogPackagesViewModel}"
+    d:DataContext="{d:DesignInstance vm:PackagesDialogViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="500"
     mc:Ignorable="d">
@@ -44,7 +43,7 @@
                             Grid.Column="1"
                             Width="80"
                             Margin="0,22,0,0">
-                            <Button Grid.Column="1" Height="28">
+                            <Button Height="28">
                                 <ContentControl>
                                     <Image Height="24" Source="{Binding Path=AutoCompleteIcon}" />
                                 </ContentControl>
