--- a/ProgramManager/Views/PackagesDialog.xaml
+++ b/ProgramManager/Views/PackagesDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="ProgramManager.Views.DialogPackages"
+    x:Class="ProgramManager.Views.PackagesDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,7 +21,7 @@
 
     <Grid>
         <Grid.DataContext>
-            <vm:DialogPackagesViewModel />
+            <vm:PackagesDialogViewModel />
         </Grid.DataContext>
         <Grid.RowDefinitions>
             <RowDefinition Height="25*" />
