Divided the WrapPackageTag method into component parts. Made navigation of the main window, linked the model to xml, made packet filtering and more.

--- a/ProgramManager/Views/MainView.xaml
+++ b/ProgramManager/Views/MainView.xaml
@@ -13,7 +13,7 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
-        <vm:NewMainModel />
+        <vm:MainModel />
     </Window.DataContext>
 
     <Grid Height="566" VerticalAlignment="Top">
