A dictionary of field name associations has been added, where the value is converted in the user interface and the key is used to create xml tags. Completed navigation through the main window, category selection and packet filtering.

--- a/ProgramManager/Views/MainView.xaml
+++ b/ProgramManager/Views/MainView.xaml
@@ -13,7 +13,7 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
-        <vm:MainModel />
+        <vm:MainViewModel />
     </Window.DataContext>
 
     <Grid Height="566" VerticalAlignment="Top">
@@ -101,6 +101,7 @@
             <Button
                 Height="30"
                 Margin="5,0,0,0"
+                Command="{Binding Exit}"
                 Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
@@ -114,7 +115,10 @@
                     </ContentControl>
                 </Button.Content>
             </Button>
-            <Button Height="30" Style="{StaticResource btIcon}">
+            <Button
+                Height="30"
+                Command="{Binding OpenDialogPackage}"
+                Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
