--- a/ProgramManager/Views/DialogPacks/InputName.xaml
+++ b/ProgramManager/Views/DialogPacks/InputName.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:ProgramManager.ViewModels"
-    Title="InputName"
+    Title=""
     Width="300"
     Height="150"
     HorizontalAlignment="Center"
