--- a/ProgramManager/Views/DialogPacks/TabFields.xaml
+++ b/ProgramManager/Views/DialogPacks/TabFields.xaml
@@ -2,6 +2,7 @@
     x:Class="ProgramManager.Views.DialogPacks.TabFields"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:ProgramManager.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:ProgramManager.Models"
@@ -11,6 +12,7 @@
     d:DesignWidth="500"
     mc:Ignorable="d">
     <UserControl.Resources>
+        <converters:FieldConverter x:Key="FieldConverter" />
         <!--  Элементы из данного шаблона будет созданы для каждого элемента списка  -->
         <DataTemplate DataType="{x:Type models:TextFieldModel}">
             <StackPanel>
@@ -31,11 +33,11 @@
                             <TextBlock
                                 Height="20"
                                 Margin="10,5,168,0"
-                                Text="{Binding Path=Label}" />
+                                Text="{Binding Converter={StaticResource FieldConverter}, StringFormat={}{0}:}" />
                             <TextBox
                                 Height="35"
                                 Margin="10,5,30,5"
-                                Tag="{Binding Path=Hint}"
+                                Tag="{Binding Converter={StaticResource FieldConverter}}"
                                 Text="{Binding Path=FieldValue}" />
                         </StackPanel>
                         <WrapPanel
