Added a tag selection window, currently writing a routing script and adding packages to the database.

--- a/ProgramManager/Views/DialogPacks/InputName.xaml
+++ b/ProgramManager/Views/DialogPacks/InputName.xaml
@@ -13,7 +13,7 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
-        <viewModels:InputNameViewModelcs />
+        <viewModels:InputNameViewModel />
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
