--- a/ProgramManager/Views/DialogPacks/TagDialog.xaml
+++ b/ProgramManager/Views/DialogPacks/TagDialog.xaml
@@ -30,6 +30,8 @@
                                         Margin="0,10,0,0"
                                         HorizontalAlignment="Left"
                                         VerticalAlignment="Top"
+                                        Command="{Binding Checked}"
+                                        CommandParameter="{Binding IsChecked, ElementName=CheckBox}"
                                         Content="{Binding Name}" />
                                 </WrapPanel>
                             </DataTemplate>
@@ -48,11 +50,15 @@
                 Width="80"
                 Height="25"
                 Margin="10,10,5,0"
+                Command="{Binding SendSelected}"
+                CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
                 Content="Ок" />
             <Button
                 Width="80"
                 Height="25"
                 Margin="10,10,5,0"
+                Command="{Binding Cancel}"
+                CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
                 Content="Отмена" />
         </WrapPanel>
     </Grid>
